--- a/templates/fights/pending_challenges.html.twig
+++ b/templates/fights/pending_challenges.html.twig
@@ -10,8 +10,8 @@
             {% for challenge in pending_challenges %}
                 <div class="challenge-card">
                     <h3>Desafío de {{ challenge.challenger.username }}</h3>
-                    <p>Pokémon desafiante: {{ challenge.pokemon.pokeplantilla.name }}</p>
-                    <p>Nivel: {{ challenge.pokemon.level }} | Fuerza: {{ challenge.pokemon.strength }}</p>
+                    <p>Pokémon desafiante: {{ challenge.challengerPokemon.pokeplantilla.name }}</p>
+                    <p>Nivel: {{ challenge.challengerPokemon.level }} | Fuerza: {{ challenge.challengerPokemon.strength }}</p>
                     <a href="{{ path('app_fights_accept_challenge', {'id': challenge.id}) }}" 
                        class="btn btn-success">Aceptar Desafío</a>
                 </div>
@@ -21,5 +21,5 @@
         <p>No tienes desafíos pendientes.</p>
     {% endif %}
 
-    <a href="{{ path('app_fights_index') }}" class="btn btn-secondary">Volver</a>
+    <a href="{{ path('app_main') }}" class="btn btn-secondary">Volver</a>
 {% endblock %}
