--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -152,6 +152,7 @@
                 <a href="{{ path('app_fights_new') }}" class="btn btn-train">Nueva lucha</a>
                 <a href="{{ path('app_fights_user_history') }}" class="btn btn-primary">Mi Historial</a>
                 <a href="{{ path('app_fights_pvp_new') }}" class="btn btn-danger">Luchar contra Entrenador</a>
+                <a href="{{ path('app_fights_pvp_team') }}" class="btn btn-danger">🔥 Lucha por equipos contra Entrenador</a>
                 <a href="{{ path('app_fights_pending') }}" class="btn btn-warning">
                     Partidas Disponibles
                     {% if pending_challenges > 0 %}
